Fixed : reset cache issues

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="It's your own Seoul guide" />
     <title>My Seoul Guide</title>
   </head>
+  <base href="/" />
   <body>
     <div id="root"></div>
   </body>
